tests/fixtures/guardrails/invalid/direct-admin-access-single-file/app/routes/products.ts
import { authenticateAdmin } from "~/platform/shopify.server";

export async function action() {
  return authenticateAdmin;
}
